--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/prk3/sundae-collab-client.git"
   },
   "dependencies": {
-    "jot": "https://github.com/prk3/jot.git",
+    "jot": "git+https://github.com/prk3/jot.git",
     "loglevel": "^1.6.8",
     "nanoid": "^3.1.3",
     "sundae-collab-shared": "https://github.com/prk3/sundae-collab-shared.git",
