--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sundae-collab-client",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Framework-agnostic, javascript sundae client.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "test": "jest",
     "lint": "eslint --ext .ts index.ts src/"
   },
   "author": {
@@ -23,11 +24,14 @@
     "jot": "git+https://github.com/prk3/jot.git",
     "loglevel": "^1.6.8",
     "nanoid": "^3.1.3",
-    "sundae-collab-shared": "https://github.com/prk3/sundae-collab-shared.git",
+    "sundae-collab-shared": "git+https://github.com/prk3/sundae-collab-shared.git",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/nanoid": "^2.1.0",
+    "@types/node": "^13.13.4",
+    "@types/ws": "^7.2.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -35,6 +39,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0"
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^25.5.3",
+    "ts-jest": "^25.4.0",
+    "ws": "^7.2.5"
   }
 }
